methods.basics.Methods.scala.error
Erreur de compilation :
Methods:6: error: not found: value pas
    nbpas=pas+1
          ^